--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,6 +34,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - run: mkdir -p supabase/remotes
       - uses: hashicorp/setup-terraform@v3
         with:
           terraform_wrapper: false
